fixed EW-72: section resize while sliding the landing page on iOS devices

--- a/django-website/wheelie/client/scss/layout/landing/_landing_splash.scss
+++ b/django-website/wheelie/client/scss/layout/landing/_landing_splash.scss
@@ -3,7 +3,6 @@
   background-position: 50% 100%;
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 96.764vh;
   padding: 1.618vh 2.618vw;
 
   @media #{$small}, #{$medium} {
@@ -27,7 +26,7 @@
     border-bottom: none;
     content: '';
     left: -1.112vw;
-    height: 93.528vh;
+    height: 96%;
     position: absolute;
     top: 1.618vh;
     width: 96.764vw;
